tests/script_runtime_errors/assign_const/error.txt
Error: 
    1 | const A = {"snot": "badger"};
    2 | 
    3 | let A.snot = event;
      |     ^^^^^^^^^^^^^^ Can't assign to a constant expression
    4 | 
    5 | A